# service-platform

./: .gitignore  docker-compose.yml
email/: config.go  config.json  consumer.go  go.mod  go.sum  mail.go  main.go
email/mailing/: mail.go  order.go  user.go
email/messaging/: order.go  provider.go  rabbit_mq.go  user.go
invoices/: Cargo.toml  config.toml
invoices/src/: config.rs  main.rs  state.rs
invoices/src/dto/: invoice_dto.rs  mod.rs
invoices/src/entities/: invoice.rs
invoices/src/handlers/: invoice_handler.rs
invoices/src/migrations/: V001__CreateInvoicesTable.sql
invoices/src/models/: message_wrapper.rs  mod.rs  page.rs
invoices/src/repositories/: invoice_repository.rs  mod.rs
invoices/src/services/: invoice_service.rs
orders/: config.go  config.json  config.yml  go.mod  go.sum  main.go
orders/api/: errors.go  handler.go  middleware.go  order.go  param_parser.go  problem_details.go  product.go
orders/application/: order.go  product.go
orders/domain/: errors.go  message_provider.go  order.go  paging.go  product.go
orders/infra/: context.go  order.go  product.go
orders/infrastructure/: context.go  keycloak.go  order.go  paging.go  product.go  rabbit_mq.go
orders/messaging/: provider.go  rabbit_mq.go
users/: Dockerfile  Users.sln
users/Users.Api/: ConfigConstants.cs  ExceptionHandler.cs  Program.cs  Users.Api.csproj  appsettings.Development.json  packages.lock.json
users/Users.Domain/: Users.Domain.csproj  packages.lock.json
users/Users.Infrastructure/: DatabaseContext.cs  Users.Infrastructure.csproj  packages.lock.json
(+72 files in other folders)
