[package]
name = "invoices"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "=0.1.89"
axum = "=0.8.8"
chrono = { version = "=0.4.44", features = ["serde"] }
lapin = "=4.4.0"
refinery = { version = "=0.9.0", features = ["tokio-postgres"] }
serde = { version = "=1.0.228", features = ["derive"] }
tokio = { version = "=1.51.0", features = ["full"] }
tokio-postgres = { version = "=0.7.17", features = ["with-chrono-0_4", "with-uuid-1"] }
toml = "=1.1.2"
uuid = { version = "=1.23.0", features = ["serde", "v7"] }
